--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!--Captcha-->
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <title>React Form</title>
 </head>
 
